hyperkitty (1.3.4-1) unstable; urgency=medium

  * New upstream release
  * d/control: Update (build-)dependencies

 -- Jonas Meurer <jonas@freesources.org>  Fri, 05 Feb 2021 01:01:09 +0100

hyperkitty (1.3.3-1) unstable; urgency=medium

  * New upstream release
  * d/control:
    - Update (build-)dependencies
    - Bump standards-version to 4.5.1
  * d/tests/control: Update test dependencies
  * d/rules: Replace all glyphicons-halflings-regular font files with symlinks
    to the files from package fonts-glyphicons-halflings
  * d/copyright: fix order of globbing patterns

 -- Jonas Meurer <jonas@freesources.org>  Tue, 12 Jan 2021 00:16:33 +0100

hyperkitty (1.3.2-1.1) unstable; urgency=medium

  * Non-maintainer upload
  * Use glyphicons-halflings from fonts-glyphicons-halflings (Closes: #962880)

 -- Balint Reczey <rbalint@ubuntu.com>  Sat, 18 Jul 2020 13:45:03 +0200

hyperkitty (1.3.2-1) unstable; urgency=medium

  * New upstream release 1.3.2
    - d/p/MR201.patch removed
  * d/control:
    - Bump Standards-Version to 4.5.0
  * d/tests/:
    - Setup a specific test engine

 -- Pierre-Elliott Bécue <peb@debian.org>  Fri, 21 Feb 2020 23:36:23 +0100

hyperkitty (1.3.0-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * debian/patches/MR201.patch
    - make hyperkitty compatible with networkx 2.4; Closes: #945392

 -- Sandro Tosi <morph@debian.org>  Thu, 02 Jan 2020 16:17:27 -0500

hyperkitty (1.3.0-1) unstable; urgency=medium

  [ Jonas Meurer ]
  * d/patches/0002_Use_python3_by_default.patch:
    - Use python3 by default instead of /usr/bin/env python. Thanks to
      Louis-Philippe Véronneau for bugreport and patch. (Closes: #924410)
  * d/patches/0003-run-sassc-at-build-time.patch:
    - Compress sassc files using sassc at build time (Related to #924961)
  * d/control:
    - Add breaks for mailman3-web (<< 0+20180916-10~) to ensure that
      'django-admin collectstatic' is run after this update.

  [ Pierre-Elliott Bécue ]